# physbuzz

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json  flake.nix
libs/physbuzz/: bindings.cpp  bindings.hpp  camera.cpp  camera.hpp  clock.cpp  clock.hpp  collision.cpp  collision.hpp  component.hpp  context.cpp  context.hpp  debug.hpp  defines.hpp  dynamics.cpp  dynamics.hpp  events.cpp  events.hpp  file.cpp  file.hpp  framebuffer.cpp  framebuffer.hpp  logging.cpp  logging.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  renderer.cpp  renderer.hpp  resources.hpp  scene.cpp  scene.hpp  shaders.cpp  shaders.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
libs/physbuzz/2D/detectors/: gjk.cpp  gjk.hpp  sepaxis.cpp  sepaxis.hpp  sweepandprune.cpp  sweepandprune.hpp
libs/physbuzz/2D/resolvers/: angular.cpp  angular.hpp  linear.cpp  linear.hpp
libs/physbuzz/containers/: contigiousmap.hpp  vectormap.hpp
libs/physbuzz/debug/: callbacks.hpp  logging.hpp
libs/physbuzz/ecs/: component.cpp  component.hpp  scene.cpp  scene.hpp  system.cpp  system.hpp
libs/physbuzz/events/: collision.hpp  handler.hpp  object.hpp  resources.hpp  scene.hpp  window.hpp
libs/physbuzz/io/: file.hpp
libs/physbuzz/misc/: clock.cpp  clock.hpp  context.hpp  signature.cpp  signature.hpp  watcher.cpp  watcher.hpp
libs/physbuzz/physics/: collision.cpp  collision.hpp  dynamics.cpp  dynamics.hpp
libs/physbuzz/physics/2D/detectors/: gjk.cpp  gjk.hpp  sepaxis.cpp  sepaxis.hpp  sweepandprune.cpp  (+1 more)
libs/physbuzz/render/: camera.cpp  camera.hpp  cubemap.cpp  cubemap.hpp  framebuffer.hpp  lighting.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shaders.cpp  shaders.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  uniforms.hpp
libs/physbuzz/resources/: defines.hpp  file.cpp  file.hpp  handle.hpp  image.cpp  image.hpp  manager.hpp
libs/physbuzz/window/: bindings.cpp  bindings.hpp  input.hpp  window.cpp  window.hpp
resources/shaders/: circle.frag  cube.frag  default.frag  default.vert  quad.frag
resources/shaders/circle/: circle.frag
resources/shaders/common/lighting/: defines.glsl  directional.glsl  point.glsl  spot.glsl
resources/shaders/cube/: cube.frag
resources/shaders/default/: default.frag  default.vert
resources/shaders/lighting/: defines.glsl  directional.glsl  phong.glsl  point.glsl  spot.glsl
resources/shaders/skybox/: skybox.frag  skybox.vert
shaders/: shader.vert
src/: 2dphysics.cpp  2dphysics.hpp  bindings.cpp  bindings.hpp  collision.cpp  collision.hpp  debug.hpp  events.cpp  events.hpp  game.cpp  game.hpp  painter.cpp  painter.hpp  physbuzz.cpp  physbuzz.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  store.hpp  ui.cpp  ui.hpp  vulkan.cpp  vulkan.hpp  wall.cpp  wall.hpp
src/collision/: collision.cpp  collision.hpp
src/dynamics/: dynamics.cpp  dynamics.hpp
src/geometry/: box.cpp  box.hpp  circle.cpp  circle.hpp  object.cpp  object.hpp  physics_box.cpp  physics_box.hpp  physics_circle.cpp  physics_circle.hpp
src/geometry/box/: box.cpp  box.hpp
src/geometry/box/shaders/: box.frag  box.vert
src/geometry/circle/: circle.cpp  circle.hpp
src/geometry/circle/shaders/: circle.vert
src/objects/: builder.cpp  builder.hpp  circle.cpp  circle.hpp  common.hpp  cube.cpp  cube.hpp  lightcube.cpp  lightcube.hpp  line.cpp  line.hpp  model.cpp  model.hpp  objects.hpp  quad.cpp  quad.hpp  skybox.cpp  skybox.hpp  wall.cpp  wall.hpp
src/objects/box/: box.cpp
src/objects/box/shaders/: box.frag  box.vert
src/objects/circle/: circle.cpp
src/objects/circle/shaders/: circle.frag
src/objects/shader/: circle.hpp  default.hpp  skybox.hpp
src/objects/shaders/: circle.frag  circle.vert  cube.frag  cube.vert  quad.frag  quad.vert
src/opengl/: debug.hpp  shaders.cpp  shaders.hpp
src/physics/: physics.cpp  physics.hpp  physics_box.cpp  physics_box.hpp  physics_circle.cpp  physics_circle.hpp
src/renderer/: framebuffer.cpp  framebuffer.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shaders.cpp  shaders.hpp  texture.cpp  texture.hpp
src/resources/: builder.hpp  models.cpp  shaders.cpp  textures.cpp  uniforms.cpp
src/resources/shaders/: circle.hpp  cube.hpp  default.hpp  quad.hpp  skybox.hpp
src/resources/uniforms/: camera.hpp  time.hpp  window.hpp
src/scene/: component.hpp  defines.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp
src/shaders/: glsl.hpp
src/shaders/box/: box.frag  box.vert
src/ui/: handler.cpp  handler.hpp  ui.hpp
src/ui/camera/: camera.cpp  camera.hpp
src/ui/demo/: demo.cpp  demo.hpp
src/ui/dockspace/: dockspace.cpp  dockspace.hpp
src/ui/objectlist/: objectlist.cpp  objectlist.hpp
src/ui/objectpicker/: objectpicker.cpp  objectpicker.hpp
src/ui/overlay/: overlay.cpp  overlay.hpp
src/ui/viewport/: viewport.cpp  viewport.hpp
tests/: contigiousmap.cpp  events.cpp  scene.cpp  vectormap.cpp
(+4 files in other folders)
